# foxochat-frontend

./: .browserslistrc  .dockerignore  .env.development  .env.production  .gitignore  .postcssrc  Dockerfile  README.md  app.vue  biome.json  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  error.vue  eslint.config.mjs  generate-sw.js  index.html  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  rsbuild.config.ts  sw.js  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  desktop.yml
assets/css/: default.css
components/: loading.vue
middleware/: auth.global.ts  auth.ts
pages/: index.vue
pages/auth/: login.vue  register.vue
public/: manifest.json  site.webmanifest
services/: api.js
src/: codeLanguages.ts  index.tsx  style.css  style.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/components/: LoadingApp.module.css  LoadingApp.tsx
src/contexts/: PageTransitionContext.tsx
src/env/: env.d.ts
src/gateway/: connectionManager.ts  dispatcher.ts  index.ts  initWebSocket.ts  types.d.ts  webSocketClient.ts
src/hooks/: useCodeVerification.ts  useFetchUserData.ts  useIsMobile.ts  useWebSocket.ts
src/interfaces/: chat.interface.ts  interfaces.d.ts  interfaces.ts
src/pages/: NotFound.module.scss  Privacy.module.scss  Privacy.tsx  Terms.module.scss  Terms.tsx  _404.tsx
src/scss/: style.scss  variables.scss
src/services/: FoxoChatClient.ts  FoxogramClient.ts
store/: useAuthStore.ts
utils/: auth.js
(+203 files in other folders)
