[package]
name = "foxogram"
version = "0.1.0"
description = "Foxogram Desktop"
authors = ["FoxoCorp"]
license = "MIT"
repository = "https://github.com/foxocorp/foxogram-frontend"
edition = "2021"
rust-version = "1.83.0"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-log = "2.4.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.7.1"
